Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Blocker
-
Resolution: Fixed
-
Affects Version/s: 5.5, 10.0, 10.1
-
Component/s: Scripts & Clients
-
Labels:
-
Sprint:5.5.55
Description
mysql_prune_stmt_list() function incorrectly removes elements from linked list. See linked issues
Attachments
Issue Links
- duplicates
-
MDEV-12150 Security: Use-after free with mysql_close() - CVE-2017-3302
-
- Closed
-
- is part of
-
MDEV-8379 SUSE mariadb patches
-
- Closed
-
- links to
(1 links to)